service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-demo-service
spec:
  selector:
    app: otus-demo
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000 
  type: NodePort
