ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/vtimoshenko($|/)(.*)
          pathType: Prefix
          backend:
            service:
              name: otus-demo-service
              port: 
                number: 8000
